Update tables and figures

--- a/topic_table.tex
+++ b/topic_table.tex
@@ -1,39 +1,42 @@
-\begin{tabular}{lll}
+\begin{tabular}{ll}
 \toprule
-                                                AI &                                            Chronic &                                             Shared \\
+                                                AI &                                            Chronic \\
 \midrule
-                        work including well within &               disease associated diseases symptoms &                   important therefore known called \\
-             many different understanding specific &                  patients treatment clinical drugs &                      control human changes present \\
-                    project provide information eg &        infection infections bacteria immune\_system &                       genes animals gene mechanism \\
-                           using development two - &                        cells proteins cell protein &                identify effective increase factors \\
-                    data support researchers needs &        children depression mental\_health childhood &                          study may studies effects \\
-                             also research use new &                pain injury epilepsy nervous\_system &                         dna organism genome repair \\
-                      used develop based developed &                        tissue tissues defects skin &                          people health age illness \\
-                            uk future impact group &                           organisms evolved line p &              additional sites samples demonstrated \\
-                   system methods model techniques &              liver oxygen deficiency predominantly &                 brain neurons dementia nerve\_cells \\
-    applications network software computer\_science &                 cancer cancers cancer\_cells tumour &  beneficial regulatory cardiovascular\_disease r... \\
-       systems technology technologies performance &                       adult women stress pregnancy &                spread resistance feed productivity \\
-            scientific modern challenging dynamics &        revealed beginning intracellular cell\_death &                 synthesis chemistry step reactions \\
-                    process complex part structure &                         diabetes obesity food diet &                        size precise slow particles \\
-                    amp security london literature &              inflammation asthma lung inflammatory &  manufacturing\_sector intolerable future\_prospe... \\
-                      right capture safety content &                            hiv aids antibiotics tb &   ageing\_populations publicised \textbackslash n\textbackslash none\_way wewill \\
-                       social services care policy &                heart heart\_disease joint arthritis &               recurrent -\_years bleeding relatives \\
-              challenge energy integrated building &                     muscle balance stroke exercise &                     cattle pure repeat competition \\
-                       imaging images image sample &  neurodegenerative\_diseases neurodegeneration a... &                                                    \\
-                       kcl naive last\_least august &                 host transmission malaria parasite &                                                    \\
-                   design enable designed industry &                          eye blindness kidney eyes &                                                    \\
-                  team informed algorithm accounts &             lymphocytes enabling\_us females t-cell &                                                    \\
-                environmental culture history call &                                                    &                                                    \\
-                yield temperature prepare sampling &                                                    &                                                    \\
-                 measured surgery device equipment &                                                    &                                                    \\
-                   memory face cognitive attention &                                                    &                                                    \\
-                         light flow sets direction &                                                    &                                                    \\
-               choices acquisition robotics remote &                                                    &                                                    \\
- plastics restaurants grew theoretical\_understa... &                                                    &                                                    \\
-                    species water evolution plants &                                                    &                                                    \\
- ethical\_legal minimally predisposing ensure\_sa... &                                                    &                                                    \\
-                     electron electrons spin sheet &                                                    &                                                    \\
-                  language translation words sound &                                                    &                                                    \\
-            term marked premature well-established &                                                    &                                                    \\
+                  team informed algorithm accounts &              inflammation asthma lung inflammatory \\
+               choices acquisition robotics remote &                        cells proteins cell protein \\
+                  language translation words sound &                  patients treatment clinical drugs \\
+    applications network software computer\_science &                         diabetes obesity food diet \\
+                    amp security london literature &        infection infections bacteria immune\_system \\
+            scientific modern challenging dynamics &                       adult women stress pregnancy \\
+              challenge energy integrated building &                        tissue tissues defects skin \\
+ ethical\_legal minimally predisposing ensure\_sa... &                 cancer cancers cancer\_cells tumour \\
+       systems technology technologies performance &               disease associated diseases symptoms \\
+                   design enable designed industry &                            hiv aids antibiotics tb \\
+                         light flow sets direction &        revealed beginning intracellular cell\_death \\
+                       social services care policy &                     muscle balance stroke exercise \\
+                yield temperature prepare sampling &              liver oxygen deficiency predominantly \\
+                      right capture safety content &        children depression mental\_health childhood \\
+                     electron electrons spin sheet &                pain injury epilepsy nervous\_system \\
+                environmental culture history call &  neurodegenerative\_diseases neurodegeneration a... \\
+                    species water evolution plants &                          eye blindness kidney eyes \\
+                    data support researchers needs &                heart heart\_disease joint arthritis \\
+                 measured surgery device equipment &             lymphocytes enabling\_us females t-cell \\
+                   system methods model techniques &                 host transmission malaria parasite \\
+ plastics restaurants grew theoretical\_understa... &                           organisms evolved line p \\
+                       imaging images image sample &                         dna organism genome repair \\
+            term marked premature well-established &  beneficial regulatory cardiovascular\_disease r... \\
+                      used develop based developed &                       genes animals gene mechanism \\
+                    project provide information eg &                 brain neurons dementia nerve\_cells \\
+                    process complex part structure &               recurrent -\_years bleeding relatives \\
+                       kcl naive last\_least august &                          people health age illness \\
+                        work including well within &                spread resistance feed productivity \\
+                   memory face cognitive attention &                          study may studies effects \\
+                             also research use new &  manufacturing\_sector intolerable future\_prospe... \\
+                           using development two - &   ageing\_populations publicised \textbackslash n\textbackslash none\_way wewill \\
+             many different understanding specific &                 synthesis chemistry step reactions \\
+                            uk future impact group &                   important therefore known called \\
+             additional sites samples demonstrated &                     cattle pure repeat competition \\
+                       size precise slow particles &                      control human changes present \\
+               identify effective increase factors &                                                    \\
 \bottomrule
 \end{tabular}
