Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -484,58 +484,63 @@ Our analysis suggests high levels of technological readiness in the active missi
 \subsection{Trajectory of the active mission field}
 \label{subsec:trajectory}
 
-We conclude our summary of findings with the results of our analysis of the trajectories in the active mission field. Here, we are particularly interested in understanding the extent to which the trajectories that are being explored in the mission field are diversified or concentrated, which of the mission components dominates the mission field, what is the role of various research funders (Research Councils) in maintaining diversity and exploration in the active mission field, and whether there are any disease areas which are currently being neglected inside the mission field.
+We conclude our summary of findings with the results of our analysis of the trajectories in the active mission field. Here, we are particularly interested in understanding the extent to which the trajectories being explored in the mission field are diversified or concentrated, which of the mission components dominates the mission field, what is the role of various research funders (Research Councils) in maintaining diversity and exploration in the active mission field, and whether there are any disease areas which are currently being neglected in the mission field.
 
-Our analysis builds on the \texttt{TopSBM} analysis that we reported in Subsection \ref{subsec:topic}. Table \ref{tab:topics} presents the topics that we extracted through this analysis at the second level of aggregation (comprising 71 topics).\footnote{The first level of aggregation comprises 491 topics, which is too detailed for reporting here, while the third level of aggregation comprises 13 topics, which is too aggregated}. We have classified topics into their `origin' depending on whether they tend to be over-represented in the AI mission component or the chronic disease mission component
+Our analysis is based on the \texttt{TopSBM} analysis that we outlined in Subsection \ref{subsec:topic}. Table \ref{tab:topics} presents the topics that we extracted through this analysis at the second level of aggregation (comprising 71 topics).\footnote{The first level of aggregation has 491 topics, which is too detailed for reporting here, while the third level of aggregation comprises 13 topics, which is too aggregated.}. We have classified topics into their `origin' mission component depending on whether they tend to be over-represented in the AI mission component or the chronic disease mission component.\footnote{That is, if the share of projects with presence in the topic in a mission component normalised by the share in the potential mission field are above one}. In doing this, we hope to understand 
 
-\begin{landscape}
+%\begin{landscape}
 \begin{table}
-\footnotesize
-\begin{tabular}{lll}
+\centering
+\small
+\begin{tabular}{ll}
 \toprule
-                                                AI &                                            Chronic &                                             Shared \\
-\hline
+                                                Artificial Intelligence &                                            Chronic \\
+\hline                                                
 \midrule
-                        work including well within &               disease associated diseases symptoms &                   important therefore known called \\
-             many different understanding specific &                         dna organism genome repair &                      control human changes present \\
-                    project provide information eg &                  patients treatment clinical drugs &                       genes animals gene mechanism \\
-                           using development two - &        infection infections bacteria immune\_system &                identify effective increase factors \\
-                    data support researchers needs &                        cells proteins cell protein &                          study may studies effects \\
-                             also research use new &        children depression mental\_health childhood &                          people health age illness \\
-                      used develop based developed &                pain injury epilepsy nervous\_system &              additional sites samples demonstrated \\
-                            uk future impact group &  beneficial regulatory cardiovascular\_disease r... &                 brain neurons dementia nerve\_cells \\
-                   system methods model techniques &                        tissue tissues defects skin &                spread resistance feed productivity \\
-    applications network software computer\_science &                           organisms evolved line p &                 synthesis chemistry step reactions \\
-       systems technology technologies performance &              liver oxygen deficiency predominantly &                        size precise slow particles \\
-            scientific modern challenging dynamics &                 cancer cancers cancer\_cells tumour &  manufacturing\_sector intolerable future\_prospe... \\
-                    process complex part structure &                       adult women stress pregnancy &   ageing\_populations publicised \textbackslash n\textbackslash none\_way wewill \\
-                    amp security london literature &        revealed beginning intracellular cell\_death &               recurrent -\_years bleeding relatives \\
-                      right capture safety content &                         diabetes obesity food diet &                     cattle pure repeat competition \\
-                       social services care policy &              inflammation asthma lung inflammatory &                                                    \\
-              challenge energy integrated building &                            hiv aids antibiotics tb &                                                    \\
-                       imaging images image sample &                heart heart\_disease joint arthritis &                                                    \\
-                       kcl naive last\_least august &                     muscle balance stroke exercise &                                                    \\
-                   design enable designed industry &  neurodegenerative\_diseases neurodegeneration a... &                                                    \\
-                  team informed algorithm accounts &                 host transmission malaria parasite &                                                    \\
-                environmental culture history call &                          eye blindness kidney eyes &                                                    \\
-                yield temperature prepare sampling &             lymphocytes enabling\_us females t-cell &                                                    \\
-                 measured surgery device equipment &                                                    &                                                    \\
-                   memory face cognitive attention &                                                    &                                                    \\
-                         light flow sets direction &                                                    &                                                    \\
-               choices acquisition robotics remote &                                                    &                                                    \\
- plastics restaurants grew theoretical\_understa... &                                                    &                                                    \\
-                    species water evolution plants &                                                    &                                                    \\
- ethical\_legal minimally predisposing ensure\_sa... &                                                    &                                                    \\
-                     electron electrons spin sheet &                                                    &                                                    \\
-                  language translation words sound &                                                    &                                                    \\
-            term marked premature well-established &                                                    &                                                    \\
+                  team informed algorithm accounts &              inflammation asthma lung inflammatory \\
+               choices acquisition robotics remote &                        cells proteins cell protein \\
+                  language translation words sound &                  patients treatment clinical drugs \\
+    applications network software computer\_science &                         diabetes obesity food diet \\
+                    amp security london literature &        infection infections bacteria immune\_system \\
+            scientific modern challenging dynamics &                       adult women stress pregnancy \\
+              challenge energy integrated building &                        tissue tissues defects skin \\
+ ethical\_legal minimally predisposing ensure\_sa... &                 cancer cancers cancer\_cells tumour \\
+       systems technology technologies performance &               disease associated diseases symptoms \\
+                   design enable designed industry &                            hiv aids antibiotics tb \\
+                         light flow sets direction &        revealed beginning intracellular cell\_death \\
+                       social services care policy &                     muscle balance stroke exercise \\
+                yield temperature prepare sampling &              liver oxygen deficiency predominantly \\
+                      right capture safety content &        children depression mental\_health childhood \\
+                     electron electrons spin sheet &                pain injury epilepsy nervous\_system \\
+                environmental culture history call &  neurodegenerative\_diseases neurodegeneration a... \\
+                    species water evolution plants &                          eye blindness kidney eyes \\
+                    data support researchers needs &                heart heart\_disease joint arthritis \\
+                 measured surgery device equipment &             lymphocytes enabling\_us females t-cell \\
+                   system methods model techniques &                 host transmission malaria parasite \\
+ plastics restaurants grew theoretical\_understa... &                           organisms evolved line p \\
+                       imaging images image sample &                         dna organism genome repair \\
+            term marked premature well-established &  beneficial regulatory cardiovascular\_disease r... \\
+                      used develop based developed &                       genes animals gene mechanism \\
+                    project provide information eg &                 brain neurons dementia nerve\_cells \\
+                    process complex part structure &               recurrent -\_years bleeding relatives \\
+                       kcl naive last\_least august &                          people health age illness \\
+                        work including well within &                spread resistance feed productivity \\
+                   memory face cognitive attention &                          study may studies effects \\
+                             also research use new &  manufacturing\_sector intolerable future\_prospe... \\
+                           using development two - &   ageing\_populations publicised none\_way wewill \\
+             many different understanding specific &                 synthesis chemistry step reactions \\
+                            uk future impact group &                   important therefore known called \\
+             additional sites samples demonstrated &                     cattle pure repeat competition \\
+                       size precise slow particles &                      control human changes present \\
+               identify effective increase factors &                                                    \\
 \hline
 \bottomrule
 \end{tabular}
-\caption{Topics by origin (ranked by total weight in the potential mission field)}
+
+\caption{Topics by origin (ranked by relative specialisation in each mission component}
 \end{table}
 \label{tab:topics}
-\end{landscape}
+%\end{landscape}
 
 
 \begin{figure}[!ht]
