Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -552,7 +552,9 @@ Figure \ref{fig:topic_distr} shows the percentage of active mission field projec
     \label{fig:topic_distr}
 \end{figure}
 
-In Figure \ref{fig:topic_comp} we present the topic composition of all projects in the active mission field ranked by decreasing importance in the chronic disease-related group. The second panel presents the year when each project was funded in the vertical axis, the level of funding it received in the size of the marker, and the funder in its colour. Perhaps unsurprisingly
+In Figure \ref{fig:topic_comp} we present the topic composition of all projects in the active mission field ranked by decreasing importance in the chronic disease-related group. The lower panel presents the year when each project was funded in the vertical axis, the level of funding it received in the size of the marker, and the funder in its colour. As may be expected, projects strongly dominated by AI-topics tend to be funded by the Engineering and Physical Sciences Research Council (EPSRC) while those with a stronger medical component are funded more frequently by the Medical Research Council (MRC) and the Biotechnology and Biological Research Sciences (BBSRC). Having said this, the EPSRC is also involved in projects with a substantial chronic-disease element. 
+
+The figure also helps us track the evolution of the active mission field in some detail. We see for example, that the BBSRC was an earlier entrant in the 2010s with a cluster of projects analysing genomic and imagining data. There is a collection of large scale projects funded by the MRC in the 2015s, including the Centre for Health service and Academic Partnership in Translational eHealth Research (CHAPTER), MICA (the Health e-Research Centre) and the University of Oxford Big Data Institute, all large scale initiatives to analyse big health datasets with data analytics, data science and machine learning. In recent years we see an apparent diversification in terms of the range of funders involved, and more topics with higher chronic disease topic weight.
 
 \begin{figure}[!ht]
     \centering
@@ -561,6 +563,8 @@ In Figure \ref{fig:topic_comp} we present the topic composition of all projects 
     \label{fig:topic_comp}
 \end{figure}
 
+Figure \ref{fig:topic_evol} considers the evolution in the importance of different topics over time, based on their overall weight in the population. We see an increase in the total topic weight, linked with an increase in the number of projects and their areas they cover. The lower panel presents the evolution in the entropy (a measure of diversity) in AI-related and chronic disease related topics. We see that this measure has remained stable in recent years, suggesting that the collection of trajectories being explored in the active mission field is not becoming narrower over time, possibly as a consequence of the involvement of a wider range of funders in the mission field.
+
 \begin{figure}[!ht]
     \centering
     \includegraphics[width=\textwidth]{figures/fig_20_topic_trends.pdf}
@@ -568,11 +572,13 @@ In Figure \ref{fig:topic_comp} we present the topic composition of all projects 
     \label{fig:topic_evol}
 \end{figure}
 
+We conclude, in Figure \ref{fig:cd_importance}, with an analysis of the evolution in the occurrence of various chronic-disease related topics in the active mission field. 
+
 \begin{figure}[!ht]
     \centering
     \includegraphics[width=\textwidth]{figures/fig_21_heatmap.pdf}
     \caption{Project count by chronic disease related topic and year}
-    \label{fig:topic_evol}
+    \label{fig:cd_importance}
 \end{figure}
 
 \section{Discussion and conclusions}
