Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -572,7 +572,7 @@ Figure \ref{fig:topic_evol} considers the evolution in the importance of differe
     \label{fig:topic_evol}
 \end{figure}
 
-We conclude, in Figure \ref{fig:cd_importance}, with an analysis of the evolution in the occurrence of various chronic-disease related topics in the active mission field. 
+We conclude, in Figure \ref{fig:cd_importance}, by focusing on the evolution of the occurrence of various chronic-disease related topics in the active mission field. I
 
 \begin{figure}[!ht]
     \centering
